@@ -1,3 +1,7 @@
+2007-04-24  Hui-May Chang <hm.chang@apple.com>
+
+	* gcc.target/i386/reload-1.c. New.
+
 2007-04-24  Andrew Pinski  <andrew_pinski@playstation.sony.com>
 	    Olga Golovanevsky  <olga@il.ibm.com>
 
